added CMS and Parallel data and final conclusions about GC